updates and pyton file to train

--- a/Baseline Model and Metrics.ipynb
+++ b/Baseline Model and Metrics.ipynb
@@ -494,6 +494,7 @@
     "        \n",
     "    avg_loss = total_loss / len(dataloader)\n",
     "    avg_metric = total_metric / len(dataloader)\n",
+    "    print(f'train loss: {avg_loss:.2f}, metric: {avg_metric:.2f}')\n",
     "    \n",
     "    return avg_loss, avg_metric\n",
     "\n",
@@ -538,6 +539,7 @@
     "        \n",
     "    avg_loss = total_loss / len(dataloader)\n",
     "    avg_metric = (total_metric / len(dataloader)) * 100\n",
+    "    print(f'valid loss: {avg_loss:.2f}, metric: {avg_metric:.2f}')\n",
     "    \n",
     "    return avg_loss, avg_metric\n"
    ]
