--- a/Baseline Model and Metrics.ipynb
+++ b/Baseline Model and Metrics.ipynb
@@ -7,6 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import needed libraries\n",
+    "\n",
     "import numpy as np\n",
     "import random\n",
     "from transformers import ResNetModel\n",
@@ -597,7 +599,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "2022.5.0"
   }
  },
  "nbformat": 4,
