--- a/Baseline Model and Metrics.ipynb
+++ b/Baseline Model and Metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "4f28f1b3",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b723e46b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cpu\n"
+     ]
+    }
+   ],
    "source": [
-    "DEVICE = 'cpu'\n",
+    "DEVICE = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(DEVICE)\n",
     "\n",
     "base_path = 'C:/Users/Alex/Desktop/Universidad/Third Course/First Semester/Vision & Learning/PROJECT 3//'\n",
     "img_path = f'{base_path}Images/'\n",
@@ -36,6 +45,28 @@
     "\n",
     "data = pd.read_csv(cap_path)\n",
     "partitions = np.load('flickr8k_partitions.npy', allow_pickle=True).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CUDA is not available.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"CUDA is available!\")\n",
+    "else:\n",
+    "    print(\"CUDA is not available.\")"
    ]
   },
   {
@@ -402,7 +433,7 @@
    "outputs": [],
    "source": [
     "data_train = Data(data, partitions['train'])\n",
-    "dataloader_train = DataLoader(data_train, batch_size=32, shuffle=True)\n",
+    "dataloader_train = DataLoader(data_train, batch_size=4, shuffle=True)\n",
     "batch= next(iter(dataloader_train))"
    ]
   },
@@ -474,25 +505,14 @@
     "        \n",
     "        total_loss += loss.item()\n",
     "\n",
-    "        if metric == \"bleu1\":\n",
-    "                \n",
-    "            metric = bleu.compute(predictions=pred1, references=ref,max_order=1 )\n",
-    "            total_metric += metric['bleu']\n",
+    "        METRIC = evaluate.load(str(metric).lower())\n",
     "\n",
-    "        elif (metric == \"bleu2\"):\n",
-    "                \n",
-    "            metric = bleu.compute(predictions=pred1, references=ref,max_order=2 )\n",
-    "            total_metric += metric['bleu']\n",
+    "        metriccompute = METRIC.compute(predictions=pred1, references=ref,max_order=1 )\n",
     "\n",
-    "        elif metric == \"rouge\":\n",
-    "                \n",
-    "            metric = rouge.compute(predictions=pred1, references=ref)\n",
-    "            total_metric += metric['rougeL']\n",
-    "\n",
-    "        elif metric == \"meteor\":\n",
-    "                \n",
-    "            metric = meteor.compute(predictions=pred1, references=ref)\n",
-    "            total_metric += metric['meteor']\n",
+    "        if metric == \"rouge\":\n",
+    "            total_metric += metriccompute['rougeL']\n",
+    "        else:\n",
+    "            total_metric += metriccompute[str(metric).lower()]\n",
     "        \n",
     "    avg_loss = total_loss / len(dataloader)\n",
     "    avg_metric = total_metric / len(dataloader)\n",
@@ -518,26 +538,15 @@
     "            loss = crit(outputs, targets)\n",
     "\n",
     "            total_loss += loss.item()\n",
+    "            METRIC = evaluate.load(str(metric).lower())\n",
     "\n",
-    "            if metric == \"bleu1\":\n",
-    "                    \n",
-    "                metric = bleu.compute(predictions=pred1, references=ref,max_order=1 )\n",
-    "                total_metric += metric['bleu']\n",
+    "            metriccompute = METRIC.compute(predictions=pred1, references=ref,max_order=1 )\n",
     "\n",
-    "            elif (metric == \"bleu2\"):\n",
-    "                    \n",
-    "                metric = bleu.compute(predictions=pred1, references=ref,max_order=2 )\n",
-    "                total_metric += metric['bleu']\n",
+    "            if metric == \"rouge\":\n",
+    "                total_metric += metriccompute['rougeL']\n",
+    "            else:\n",
+    "                total_metric += metriccompute[str(metric).lower()]\n",
     "\n",
-    "            elif metric == \"rouge\":\n",
-    "                    \n",
-    "                metric = rouge.compute(predictions=pred1, references=ref)\n",
-    "                total_metric += metric['rougeL']\n",
-    "\n",
-    "            elif metric == \"meteor\":\n",
-    "                    \n",
-    "                metric = meteor.compute(predictions=pred1, references=ref)\n",
-    "                total_metric += metric['meteor']\n",
     "        \n",
     "    avg_loss = total_loss / len(dataloader)\n",
     "    avg_metric = (total_metric / len(dataloader)) * 100\n",
@@ -599,7 +608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "2022.5.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
