first scratch encoder

--- a/Encoder.ipynb
+++ b/Encoder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,12 @@
     "import torch\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
     "from torch.utils.data import DataLoader, Dataset\n",
-    "import torchvision.transforms as T"
+    "import torchvision.transforms as T\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torchvision.models as models\n",
+    "import torchvision.transforms as transforms\n",
+    "from torch.nn.utils.rnn import pad_sequence"
    ]
   },
   {
@@ -169,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +229,7 @@
        " '.']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -458,10 +463,169 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def caps_collate(batch, pad_idx, batch_first=False):\n",
+    "    imgs = [item[0].unsqueeze(0) for item in batch]\n",
+    "    imgs = torch.cat(imgs, dim=0)\n",
+    "    \n",
+    "    targets = [item[1] for item in batch]\n",
+    "    targets = pad_sequence(targets, batch_first=batch_first, padding_value=pad_idx)\n",
+    "    \n",
+    "    return imgs, targets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "class CapsCollate:\n",
+    "    def __init__(self,pad_idx,batch_first=False):\n",
+    "        self.pad_idx = pad_idx\n",
+    "        self.batch_first = batch_first\n",
+    "        \n",
+    "    def __call__(self,batch):\n",
+    "        imgs = [item[0].unsqueeze(0) for item in batch]\n",
+    "#         print(f\"shape - {(imgs)}\")\n",
+    "#         print(\"----\"*22)\n",
+    "        imgs = torch.cat(imgs,dim=0)\n",
+    "#         print(f\"shape - {imgs}\")\n",
+    "#         print(\"------\")\n",
+    "        targets = [item[1] for item in batch]\n",
+    "        targets = pad_sequence(targets, batch_first=self.batch_first, padding_value=self.pad_idx)\n",
+    "        return imgs,targets\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nBATCH_SIZE = 4\\nNUM_WORKER = 1\\n\\n# Token para representar el relleno\\npad_idx = dataset.vocab.stoi[\"<PAD>\"]\\n\\ndata_loader = DataLoader(\\n    dataset=dataset,\\n    batch_size=BATCH_SIZE,\\n    num_workers=NUM_WORKER,\\n    shuffle=True,\\n    collate_fn=lambda batch: caps_collate(batch, pad_idx=pad_idx, batch_first=True)\\n)\\n'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''\n",
+    "BATCH_SIZE = 4\n",
+    "NUM_WORKER = 1\n",
+    "\n",
+    "# Token para representar el relleno\n",
+    "pad_idx = dataset.vocab.stoi[\"<PAD>\"]\n",
+    "\n",
+    "data_loader = DataLoader(\n",
+    "    dataset=dataset,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_workers=NUM_WORKER,\n",
+    "    shuffle=True,\n",
+    "    collate_fn=lambda batch: caps_collate(batch, pad_idx=pad_idx, batch_first=True)\n",
+    ")\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#writing the dataloader\n",
+    "#setting the constants\n",
+    "BATCH_SIZE = 4\n",
+    "NUM_WORKER = 1\n",
+    "\n",
+    "#token to represent the padding\n",
+    "pad_idx = dataset.vocab.stoi[\"<PAD>\"]\n",
+    "\n",
+    "data_loader = DataLoader(\n",
+    "    dataset=dataset,\n",
+    "    batch_size=BATCH_SIZE,\n",
+    "    num_workers=NUM_WORKER,\n",
+    "    shuffle=True,\n",
+    "    collate_fn=CapsCollate(pad_idx=pad_idx,batch_first=True)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#generating the iterator from the dataloader\n",
+    "dataiter = iter(data_loader)\n",
+    "\n",
+    "#getting the next batch\n",
+    "batch = next(dataiter)\n",
+    "\n",
+    "#unpacking the batch\n",
+    "images, captions = batch\n",
+    "\n",
+    "#showing info of image in single batch\n",
+    "for i in range(BATCH_SIZE):\n",
+    "    img,cap = images[i],captions[i]\n",
+    "#     print(f\"captions - {captions[i]}\")\n",
+    "    caption_label = [dataset.vocab.itos[token] for token in cap.tolist()]\n",
+    "    eos_index = caption_label.index('<EOS>')\n",
+    "    caption_label = caption_label[1:eos_index]\n",
+    "    caption_label = ' '.join(caption_label)                      \n",
+    "    show_image(img,caption_label)\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "class ImageEncoder(nn.Module):\n",
+    "    def __init__(self, embed_size):\n",
+    "        super(ImageEncoder, self).__init__()\n",
+    "        resnet = models.resnet50(pretrained=True)\n",
+    "        # Eliminar la última capa completamente conectada (clasificación)\n",
+    "        modules = list(resnet.children())[:-1]\n",
+    "        self.resnet = nn.Sequential(*modules)\n",
+    "        self.embedding = nn.Linear(resnet.fc.in_features, embed_size)\n",
+    "        self.batch_norm = nn.BatchNorm1d(embed_size, momentum=0.01)\n",
+    "        \n",
+    "    def forward(self, images):\n",
+    "        with torch.no_grad():\n",
+    "            features = self.resnet(images)\n",
+    "        features = features.view(features.size(0), -1)\n",
+    "        features = self.batch_norm(self.embedding(features))\n",
+    "        return features\n",
+    "\n",
+    "# Uso de ejemplo\n",
+    "# Supongamos que `image` es tu tensor de imagen (batch_size, channels, height, width)\n",
+    "# Asegúrate de que la imagen esté normalizada antes de pasarla al modelo\n",
+    "\n",
+    "embed_size = 256  # Tamaño del embedding\n",
+    "encoder = ImageEncoder(embed_size)\n",
+    "\n",
+    "# Imagina que tienes un batch de imágenes\n",
+    "image = torch.randn((64, 3, 224, 224))  # Ejemplo aleatorio, deberías cargar tus propias imágenes\n",
+    "\n",
+    "# Obtener los embeddings\n",
+    "output = encoder(image)\n",
+    "\n",
+    "print(\"Tamaño del embedding:\", output.shape)\n"
+   ]
   }
  ],
  "metadata": {
